Fix code overflow

--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -287,6 +287,7 @@ body {
 
 div.sourceCode {
   margin-bottom: ($base-line-height * 1rem);
+  background-color: $code-background-color;
   box-shadow: 1px 1px 1px desaturate(darken($code-background-color, 20%), 50%);
 }
 
